src/components/app/Footer/Footer.scss
@use "/src/colors.scss" as colors;

.footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: colors.$container-background;
    width: 100%;
    height: 3rem;
    border-top: 1px solid colors.$light-border-color;

    position: sticky;
    bottom: 0;
    left: 0;

    .undo-redo-controls {
        display: flex;
        gap: 0.5rem;

        button.active {
            background-color: #007bff;
            color: white;
        }
    }
}

